--- a/index.html
+++ b/index.html
@@ -1,47 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Results summary component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="styles.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Results summary component</title>
 
-  Your Result
-  76
-  of 100
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <section id="result">
+        <h3 class="result__heading">Your Result</h3>
+        <div class="circle">
+          <!--TODO: JSON data-->
+          <span class="result__score">76</strong>
+          <small class="result__of-hundred">of 100</small>
+        </div>
+        <h2 class="result__word">Great</h2>
+        <p class="result__descr">
+          You scored higher than 65% of the people who have taken these tests.
+        </p>
+      </section>
+      <section id="summary">
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
+        <h3 class="summary__heading">Summary</h3>
+        <div class="summary__container">
 
-  Reaction
-  80 / 100
+          <div class="summary__container--reaction">
+            <div class="summary__container--title">
+              <img src="assets/images/icon-reaction.svg" alt="reaction icon" />
+              <p>Reaction</p>
+            </div>
+            <div class="summary__container--score">
+              <strong>80</strong>  <!--TODO: JSON data-->
+              <p> / 100</p>
+            </div>
+          </div>
 
-  Memory
-  92 / 100
+          <div class="summary__container--memory">
+            <div class="summary__container--title">
+              <img src="assets/images/icon-memory.svg" alt="memory icon" />
+              <p>Memory</p>
+            </div>
+            <div class="summary__container--score">
+              <strong>92</strong>  <!--TODO: JSON data-->
+              <p> / 100</p>
+            </div>
+          </div>
+          
+          <div class="summary__container--verbal">
+            <div class="summary__container--title">
+              <img src="assets/images/icon-verbal.svg" alt="verbal icon" />
+              <p>Verbal</p>
+            </div>
+            <div class="summary__container--score">
+              <strong>61</strong>  <!--TODO: JSON data-->
+              <p> / 100</p>
+            </div>
+          </div>
+          
+          <div class="summary__container--visual">
+            <div class="summary__container--title">
+              <img src="assets/images/icon-visual.svg" alt="visual icon" />
+              <p>Visual</p>
+            </div>
+            <div class="summary__container--score">
+              <strong>72</strong>  <!--TODO: JSON data-->
+              <p> / 100</p>
+            </div>
+          </div>
 
-  Verbal
-  61 / 100
+          <button type="submit" class="continue">Continue</button>
+        </div>
+      </section>
+    </main>
 
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Eryk Frąckowiak</a>.
+    </div>
+  </body>
 </html>
