--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
 
     <title>Frontend Mentor | Results summary component</title>
@@ -26,72 +32,80 @@
       }
     </style>
   </head>
+
   <body>
     <main>
-      <section id="result">
-        <h3 class="result__heading">Your Result</h3>
-        <div class="circle">
-          <!--TODO: JSON data-->
-          <span class="result__score">76</strong>
-          <small class="result__of-hundred">of 100</small>
-        </div>
-        <h2 class="result__word">Great</h2>
-        <p class="result__descr">
-          You scored higher than 65% of the people who have taken these tests.
-        </p>
-      </section>
-      <section id="summary">
-
-        <h3 class="summary__heading">Summary</h3>
-        <div class="summary__container">
-
-          <div class="summary__container--reaction">
-            <div class="summary__container--title">
-              <img src="assets/images/icon-reaction.svg" alt="reaction icon" />
-              <p>Reaction</p>
-            </div>
-            <div class="summary__container--score">
-              <strong>80</strong>  <!--TODO: JSON data-->
-              <p> / 100</p>
-            </div>
+      <div class="two-cards">
+        <section id="result" class="card">
+          <h3 class="result__heading">Your Result</h3>
+          <div class="circle">
+            <!--TODO: JSON data-->
+            <strong class="result__score">76</strong>
+            <small class="result__of-hundred">of 100</small>
           </div>
+          <h2 class="result__word">Great</h2>
+          <p class="result__descr">
+            You scored higher than 65% of the people who have taken these tests.
+          </p>
+        </section>
+        <section id="summary" class="card">
+          <h3 class="summary__heading">Summary</h3>
+          <div class="summary__container">
+            <div class="summary__container--reaction">
+              <div class="summary__container--title">
+                <img
+                  src="assets/images/icon-reaction.svg"
+                  alt="reaction icon"
+                />
+                <p>Reaction</p>
+              </div>
+              <div class="summary__container--score">
+                <strong>80</strong>
+                <!--TODO: JSON data-->
+                <p>/ 100</p>
+              </div>
+            </div>
 
-          <div class="summary__container--memory">
-            <div class="summary__container--title">
-              <img src="assets/images/icon-memory.svg" alt="memory icon" />
-              <p>Memory</p>
+            <div class="summary__container--memory">
+              <div class="summary__container--title">
+                <img src="assets/images/icon-memory.svg" alt="memory icon" />
+                <p>Memory</p>
+              </div>
+              <div class="summary__container--score">
+                <strong>92</strong>
+                <!--TODO: JSON data-->
+                <p>/ 100</p>
+              </div>
             </div>
-            <div class="summary__container--score">
-              <strong>92</strong>  <!--TODO: JSON data-->
-              <p> / 100</p>
-            </div>
-          </div>
-          
-          <div class="summary__container--verbal">
-            <div class="summary__container--title">
-              <img src="assets/images/icon-verbal.svg" alt="verbal icon" />
-              <p>Verbal</p>
-            </div>
-            <div class="summary__container--score">
-              <strong>61</strong>  <!--TODO: JSON data-->
-              <p> / 100</p>
-            </div>
-          </div>
-          
-          <div class="summary__container--visual">
-            <div class="summary__container--title">
-              <img src="assets/images/icon-visual.svg" alt="visual icon" />
-              <p>Visual</p>
-            </div>
-            <div class="summary__container--score">
-              <strong>72</strong>  <!--TODO: JSON data-->
-              <p> / 100</p>
-            </div>
-          </div>
 
-          <button type="submit" class="continue">Continue</button>
-        </div>
-      </section>
+            <div class="summary__container--verbal">
+              <div class="summary__container--title">
+                <img src="assets/images/icon-verbal.svg" alt="verbal icon" />
+                <p>Verbal</p>
+              </div>
+              <div class="summary__container--score">
+                <strong>61</strong>
+                <!--TODO: JSON data-->
+                <p>/ 100</p>
+              </div>
+            </div>
+
+            <div class="summary__container--visual">
+              <div class="summary__container--title">
+                <img src="assets/images/icon-visual.svg" alt="visual icon" />
+                <p>Visual</p>
+              </div>
+              <div class="summary__container--score">
+                <strong>72</strong>
+                <!--TODO: JSON data-->
+                <p>/ 100</p>
+              </div>
+            </div>
+
+            <button type="submit" class="continue">Continue</button>
+          </div>
+        </section>
+      </div>
     </main>
 
     <div class="attribution">
