--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
                 <p>/ 100</p>
               </div>
             </div>
-
-            <button type="submit" class="continue">Continue</button>
           </div>
+          <button type="submit" class="summary__button--continue">
+            Continue
+          </button>
         </section>
       </div>
     </main>
