--- a/index.html
+++ b/index.html
@@ -49,63 +49,67 @@
           </p>
         </section>
         <section id="summary" class="card">
-          <h3 class="summary__heading">Summary</h3>
-          <div class="summary__container">
-            <div class="summary__container--reaction">
-              <div class="summary__container--title">
-                <img
-                  src="assets/images/icon-reaction.svg"
-                  alt="reaction icon"
-                />
-                <p>Reaction</p>
+          <div class="summary__card">
+            <div class="summary__items">
+            <h3 class="summary__heading">Summary</h3>
+            <div class="summary__container">
+              <div class="summary__container--reaction">
+                <div class="summary__container--title">
+                  <img
+                    src="assets/images/icon-reaction.svg"
+                    alt="reaction icon"
+                  />
+                  <p>Reaction</p>
+                </div>
+                <div class="summary__container--score">
+                  <strong>80</strong>
+                  <!--TODO: JSON data-->
+                  <p>/ 100</p>
+                </div>
               </div>
-              <div class="summary__container--score">
-                <strong>80</strong>
-                <!--TODO: JSON data-->
-                <p>/ 100</p>
-              </div>
-            </div>
 
-            <div class="summary__container--memory">
-              <div class="summary__container--title">
-                <img src="assets/images/icon-memory.svg" alt="memory icon" />
-                <p>Memory</p>
+              <div class="summary__container--memory">
+                <div class="summary__container--title">
+                  <img src="assets/images/icon-memory.svg" alt="memory icon" />
+                  <p>Memory</p>
+                </div>
+                <div class="summary__container--score">
+                  <strong>92</strong>
+                  <!--TODO: JSON data-->
+                  <p>/ 100</p>
+                </div>
               </div>
-              <div class="summary__container--score">
-                <strong>92</strong>
-                <!--TODO: JSON data-->
-                <p>/ 100</p>
-              </div>
-            </div>
 
-            <div class="summary__container--verbal">
-              <div class="summary__container--title">
-                <img src="assets/images/icon-verbal.svg" alt="verbal icon" />
-                <p>Verbal</p>
+              <div class="summary__container--verbal">
+                <div class="summary__container--title">
+                  <img src="assets/images/icon-verbal.svg" alt="verbal icon" />
+                  <p>Verbal</p>
+                </div>
+                <div class="summary__container--score">
+                  <strong>61</strong>
+                  <!--TODO: JSON data-->
+                  <p>/ 100</p>
+                </div>
               </div>
-              <div class="summary__container--score">
-                <strong>61</strong>
-                <!--TODO: JSON data-->
-                <p>/ 100</p>
-              </div>
-            </div>
 
-            <div class="summary__container--visual">
-              <div class="summary__container--title">
-                <img src="assets/images/icon-visual.svg" alt="visual icon" />
-                <p>Visual</p>
-              </div>
-              <div class="summary__container--score">
-                <strong>72</strong>
-                <!--TODO: JSON data-->
-                <p>/ 100</p>
+              <div class="summary__container--visual">
+                <div class="summary__container--title">
+                  <img src="assets/images/icon-visual.svg" alt="visual icon" />
+                  <p>Visual</p>
+                </div>
+                <div class="summary__container--score">
+                  <strong>72</strong>
+                  <!--TODO: JSON data-->
+                  <p>/ 100</p>
+                </div>
               </div>
             </div>
+            <button type="submit" class="summary__button--continue">
+              Continue
+            </button>
           </div>
-          <button type="submit" class="summary__button--continue">
-            Continue
-          </button>
         </section>
+        </div>
       </div>
     </main>
 
