--- a/index.html
+++ b/index.html
@@ -22,15 +22,7 @@
     <title>Frontend Mentor | Results summary component</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <style></style>
   </head>
 
   <body>
@@ -48,9 +40,9 @@
             You scored higher than 65% of the people who have taken these tests.
           </p>
         </section>
+        <div class="block"></div>
         <section id="summary" class="card">
-          <div class="summary__card">
-            <div class="summary__items">
+          <div class="summary__items">
             <h3 class="summary__heading">Summary</h3>
             <div class="summary__container">
               <div class="summary__container--reaction">
@@ -109,7 +101,6 @@
             </button>
           </div>
         </section>
-        </div>
       </div>
     </main>
 
